--- a/Desarrollo/SGDC/Codificación/MostrarPromociones.css
+++ b/Desarrollo/SGDC/Codificación/MostrarPromociones.css
@@ -23,10 +23,12 @@ header {
     display: flex;
     align-items: center;
 }
-.items-izq img{
-    width:12%;
-    height: auto;
+
+.items-izq img {
+    width:120px;
+    margin-left: -10px;
 }
+
 .items-izq a p{
     padding: 5px;
     background-color: 	#8B0000;
