--- a/Desarrollo/SGDC/Codificación/Backend/src/public/css/MostrarPromociones.css
+++ b/Desarrollo/SGDC/Codificación/Backend/src/public/css/MostrarPromociones.css
@@ -23,10 +23,12 @@ header {
     display: flex;
     align-items: center;
 }
-.items-izq img{
-    width:12%;
-    height: auto;
+
+.items-izq img {
+    width:120px;
+    margin-left: -10px;
 }
+
 .items-izq a p{
     padding: 5px;
     background-color: 	#8B0000;
@@ -99,13 +101,18 @@ header {
     text-decoration: none;
 }
 .promociones {
-	display: flex;
+    display: flex-inline;
 	flex-wrap: wrap;
 }
+
+.opcion{
+    display: flex;
+}
+
 .fondo h1{
     text-align: center;
-    font-size: 30px;/*El predeterminado es de 16px*/
-    font-family: 'Times New Roman', Times, serif; /*Tipo de Letra*/
+    font-size: 30px;
+    font-family: 'Times New Roman', Times, serif;
 }
 .menu-item {
     font-size: 18px;/*El predeterminado es de 16px*/
