--- a/Desarrollo/SGDC/Codificación/IniciarSesion.css
+++ b/Desarrollo/SGDC/Codificación/IniciarSesion.css
@@ -52,9 +52,9 @@ header {
     display: flex;
     align-items: center;
 }
-.items-izq img {
-    width:120px;
-    margin-left: -10px;
+.items-izq img{
+    width:12%;
+    height: auto;
 }
 .items-izq a p{
     padding: 5px;
